[package]
name = "redstone2d"
version = "0.1.0"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezquadtree = { branch = "main", git = "https://github.com/cowboy8625/ezquadtree.git" }
ggez = "0.5.1"
rand = "0.7.3"
ron = "0.6.2"
serde = "1.0.117"


[profile.dev]
opt-level = 1
